Fix layout issues in /providers and /practices websites.
Reviewers: kunaljham, michaelraines, samuel

Reviewed By: samuel

Subscribers: janky

Differential Revision: https://phabricator.carefront.net/D146

--- a/resources/static/css-sass/base.scss
+++ b/resources/static/css-sass/base.scss
@@ -1,5 +1,6 @@
 
 $phone-max-width: 750px;
+$tablet-max-width: 768px;
 $color-spruceGreen: #00CECF;
 $color-spruceLightBlue: #eef7fb;
 $color-spruceBlue: #0BA5C5;
