--- a/resources/static/css-sass/home.scss
+++ b/resources/static/css-sass/home.scss
@@ -119,10 +119,16 @@ label {
 	width: 979px;
 	height: 371px;
 }
-@media screen and (max-width: $phone-max-width) {
+@media screen and (max-width: $phone-max-width)  {
 	.devices img {
 		width: 244px;
 		height: 92px;
+	}
+}
+@media screen and (max-width: $tablet-max-width) {
+	.devices img {
+		width: 489px;
+		height: 185px;
 	}
 }
 #footer {
