--- a/resources/static/css-sass/practice-extension.scss
+++ b/resources/static/css-sass/practice-extension.scss
@@ -296,7 +296,7 @@ body {
 	padding: 0px;
 	color: #1E333A;
 	@include font-300();
-	min-width: 1100px;
+	min-width: 1200px;
 }
 
 h1 {
